# booknlp

./: README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
booknlp/english/: bert_qa.py  entity_tagger.py  litbank_coref.py
